--- a/src/Client/ProtonVPN.Client/UI/Tray/TrayIconComponentView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Tray/TrayIconComponentView.xaml
@@ -33,7 +33,7 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
                       DoubleClickCommand="{x:Bind ViewModel.ShowApplicationCommand, Mode=OneTime}"
                       IconSource="{x:Bind ViewModel.IconSource}"
                       Id="{x:Bind ViewModel.TrayIconGuid, Mode=OneTime}"
-                      LeftClickCommand="{x:Bind ViewModel.ShowApplicationCommand, Mode=OneTime}"
+                      LeftClickCommand="{x:Bind ViewModel.ShowTrayApplicationCommand, Mode=OneTime}"
                       ToolTipText="{x:Bind ViewModel.ApplicationName, Mode=OneTime}">
         <tray:TaskbarIcon.ContextFlyout>
             <MenuFlyout>
