--- a/src/Client/ProtonVPN.Client/UI/Dialogs/ReportIssue/Pages/ReportIssueCategoriesPageView.xaml
+++ b/src/Client/ProtonVPN.Client/UI/Dialogs/ReportIssue/Pages/ReportIssueCategoriesPageView.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <!--
-Copyright (c) 2024 Proton AG
+Copyright (c) 2025 Proton AG
 
 This file is part of ProtonVPN.
 
@@ -21,12 +21,12 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 <Page x:Class="ProtonVPN.Client.UI.Dialogs.ReportIssue.Pages.ReportIssueCategoriesPageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:aprop="using:ProtonVPN.Client.Common.UI.AttachedProperties"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:toolkit="using:CommunityToolkit.WinUI.Controls"
-      xmlns:aprop="using:ProtonVPN.Client.Common.UI.AttachedProperties"
       xmlns:pathicons="using:ProtonVPN.Client.Common.UI.Assets.Icons.PathIcons"
       xmlns:reportissue="using:ProtonVPN.Client.Core.Models.ReportIssue"
+      xmlns:toolkit="using:CommunityToolkit.WinUI.Controls"
       x:DefaultBindMode="OneWay"
       NavigationCacheMode="Required"
       mc:Ignorable="d">
@@ -48,29 +48,29 @@ along with ProtonVPN.  If not, see <https://www.gnu.org/licenses/>.
 
         <ScrollViewer Grid.Row="1"
                       VerticalScrollBarVisibility="Auto">
-            <ItemsRepeater DataContext="{x:Bind ViewModel}"
-                           ItemsSource="{x:Bind ViewModel.Categories, Mode=OneTime}"
-                           TabFocusNavigation="Cycle">
-                <ItemsRepeater.ItemTemplate>
+            <ItemsControl DataContext="{x:Bind ViewModel}"
+                          ItemsSource="{x:Bind ViewModel.Categories, Mode=OneTime}"
+                          TabFocusNavigation="Cycle">
+                <ItemsControl.ItemTemplate>
                     <DataTemplate x:DataType="reportissue:IssueCategory">
                         <Grid>
                             <Border x:Name="proxy"
-                                    aprop:AncestorSource.AncestorType="ItemsRepeater" />
+                                    aprop:AncestorSource.AncestorType="ItemsControl" />
                             <toolkit:SettingsCard AutomationProperties.AutomationId="IssueCategorySettingsCard"
-                                               Command="{Binding DataContext.DataContext.SelectCategoryCommand, ElementName=proxy}"
-                                               CommandParameter="{x:Bind Mode=OneTime}"
-                                               Header="{x:Bind Name, Mode=OneTime}"
-                                               HeaderIcon="{x:Bind Icon, Mode=OneTime}"
-                                               IsClickEnabled="True"
-                                               Style="{StaticResource DefaultSettingsCardStyle}">
+                                                  Command="{Binding DataContext.DataContext.SelectCategoryCommand, ElementName=proxy}"
+                                                  CommandParameter="{x:Bind Mode=OneTime}"
+                                                  Header="{x:Bind Name, Mode=OneTime}"
+                                                  HeaderIcon="{x:Bind Icon, Mode=OneTime}"
+                                                  IsClickEnabled="True"
+                                                  Style="{StaticResource DefaultSettingsCardStyle}">
                                 <toolkit:SettingsCard.ActionIcon>
                                     <pathicons:ChevronRight />
                                 </toolkit:SettingsCard.ActionIcon>
                             </toolkit:SettingsCard>
                         </Grid>
                     </DataTemplate>
-                </ItemsRepeater.ItemTemplate>
-            </ItemsRepeater>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </ScrollViewer>
     </Grid>
 
